# ZXPicoIF2Lite

./: .gitignore  CMakeLists.txt  README.md  compressROM.c  examplecarousel.scr  picoif2lite.c  picoif2lite.h  picoif2lite.pio  picoif2lite.uf2  picoif2lite_diagROMboot.uf2  picoif2lite_lite.h  picoif2lite_v0.2.uf2  picoif2lite_v0.3.uf2  picoif2lite_v0.4.uf2  picoif2lite_v0.5.uf2  picoif2lite_v0.6.uf2  picozxcx.c  picozxcx_lite.h  picozxcx_v0.2_lite.uf2  rom_descriptor.c  rom_descriptor.h  roms_lite.h  z80torom.c
ROMExplorerSource/: romexplorer.asm
rominc/: 128_IF1_ED2_ROM.h  128_ROM.h  48.h  DiagROM.h  RAM_Tester_ROM.h  ROM_Tester_ROM.h  SS128_ROM.h  Sinclair ZX Spectrum Test ROM (1983)(Logan, Ian)(16K)[aka Sinclair ZX Spectrum Test Cartridge].h  lg.h  romexplorer.h  testrom.h
roms/: ROM-Explorer.rom
utils/: CMakeLists.txt
